# hauth

./: .ghci  .gitignore  README.md  hauth.cabal
app/: Main.hs
manage/: cabal_repl  pre_deploy_checks  reload_repl  reload_repl_on_change  watch_and_run  watch_and_test
manage/utils/: reload_repl
other/exceptional/: Main.hs
other/learn-amqp/: Main.hs
other/learn-hasql/: ItemRow.hs  Main.hs  UserRow.hs
other/learn-hasql/sql/: create_table_items.sql
other/learn-hedis/: Main.hs
other/learn-katip/: Lib.hs  Main.hs
other/learn-mtl/: Main.hs
other/learn-postgresql-simple/: ItemRow.hs  Main.hs  README.md  UserRow.hs
other/learn-stm/: Main.hs  WithBase.hs  WithStmAndAsync.hs
src/: ExceptionHandling.hs  Extra.hs  MyLib.hs
src/Adapter/InMemory/: Authentication.hs
src/Adapter/PostgreSQL_Simple/: Authentication.hs
src/Adapter/PostgreSQL_Simple/Migrations/: 000_init.sql
src/Adapter/Redis/: Authentication.hs
src/Domain/: Authentication.hs  Validation.hs
test/: JsonSpec.hs  Main.hs  RegexSpec.hs  TimeSpec.hs
test/Domain/: ValidationSpec.hs
