cabal-version:              2.4
name:                       hauth
version:                    0.1.0.0


common ghc-options
    ghc-options:           -Wall
                           -freverse-errors
                           -fwrite-ide-info
                           -hiedir=.hie

common lib-depends
    build-depends:          base ^>=4.17.2.0
                          , time
                          , time-lens
                          , pcre-heavy
                          , aeson
                          , template-haskell
                          , safe-exceptions
                          , text
                          , mtl


executable exceptional
    import:                 ghc-options
    main-is:                Main.hs
    build-depends:          base ^>=4.17.2.0
                          , hauth
                          , safe-exceptions

    hs-source-dirs:         other/exceptional
    default-language:       Haskell2010

executable hauth
    import:                 ghc-options
    main-is:                Main.hs

    build-depends:          base ^>=4.17.2.0
                          , hauth

    hs-source-dirs:         app
    default-language:       Haskell2010


library dev
    import:                 ghc-options
                         ,  lib-depends

    hs-source-dirs:         src

    -- Use case: start `cabal repl dev`, then the first exposed module will
    -- automatically be in scope.
    --
    -- So don't put more then one module here.
    --
    -- I'm not sure this is buying me much. Normal workflow would be to load the
    -- library repl as usual, then type `:m + Domain.Authentication`.
    -- That last command can't be put into a `.ghci` file unfortunately (the
    -- command is triggered before the module is compiled).
    -- I do load a smaller number of modules though, so maybe that'd be
    -- advantageous.
    exposed-modules:        Domain.Authentication

    default-language:       Haskell2010

    default-extensions:     OverloadedStrings
                          , NumericUnderscores
                          , QuasiQuotes


library
    import:                 ghc-options
                         ,  lib-depends

    -- NOTE: you probably want to access `other-modules` via the test-suite stanza instead.
    exposed-modules:        MyLib

    other-modules:          Domain.Authentication
                          , Domain.Validation

    -- build-depends:          base ^>=4.17.2.0
    --                       , time
    --                       , time-lens
    --                       , pcre-heavy
    --                       , aeson
    --                       , template-haskell
    --                       , safe-exceptions
    --                       , text
    --                       , mtl

    hs-source-dirs:         src
    default-language:       Haskell2010

    default-extensions:     OverloadedStrings
                          , NumericUnderscores
                          , QuasiQuotes

test-suite test
    import:                 ghc-options
    type:                   exitcode-stdio-1.0
    default-language:       Haskell2010
    hs-source-dirs:         test, src

    -- NOTE: The libraries listed here may or may not match the ones listed in
    --       the library stanza above. It's better to keep them separate for
    --       now, at the cost of a bit of duplication.
    build-depends:          base ^>=4.17.2.0
                          , hspec
                          , time
                          , time-lens
                          , template-haskell
                          , raw-strings-qq
                          , pcre-heavy
                          , text
                          , mtl
                          , bytestring
                          , aeson
                          , vector
                          , containers

    default-extensions:     OverloadedStrings
                          , NumericUnderscores
                          , QuasiQuotes
                          , TemplateHaskell
                          , DeriveGeneric

    main-is:                Main.hs

    other-modules:          Domain.ValidationSpec
                          , Domain.Authentication
                          , Domain.Validation
                          , TimeSpec
                          , RegexSpec
                          , JsonSpec
