cabal-version:              2.4
name:                       hauth
version:                    0.1.0.0


common ghc-options
    ghc-options:           -Wall
                           -freverse-errors
                           -fwrite-ide-info
                           -hiedir=.hie


executable exceptional
    import:                 ghc-options
    main-is:                Main.hs
    build-depends:          base ^>=4.17.2.0
                          , hauth
                          , safe-exceptions

    hs-source-dirs:         other/exceptional
    default-language:       Haskell2010

executable learn-katip
    import:                 ghc-options
    main-is:                Main.hs
    build-depends:          base ^>=4.17.2.0
                          , katip
                          , text

    hs-source-dirs:         other/learn-katip
    other-modules:          Lib
    default-extensions:     TemplateHaskell
                          , OverloadedStrings
    default-language:       Haskell2010

executable learn-stm
    import:                 ghc-options
    main-is:                Main.hs
    build-depends:          base ^>=4.17.2.0
                          , stm
                          , async
                          , classy-prelude

    hs-source-dirs:         other/learn-stm
    other-modules:          WithBase
                          , WithStmAndAsync
    default-language:       Haskell2010

executable hauth
    import:                 ghc-options
    main-is:                Main.hs

    build-depends:          base ^>=4.17.2.0
                          , hauth

    hs-source-dirs:         app
    default-language:       Haskell2010

library
    import:                 ghc-options

    -- NOTE: I can access any module in GHCi with `:load MyModule` or `:load src/MyModule.hs
    exposed-modules:        MyLib

    other-modules:          Domain.Authentication
                          , Domain.Validation
                          , Adapter.InMemory.Authentication

    build-depends:          base ^>=4.17.2.0
                          , time
                          , time-lens
                          , pcre-heavy
                          , aeson
                          , template-haskell
                          , safe-exceptions
                          , text
                          , mtl
                          , stm
                          , containers
                          , data-has
                          , string-random

    hs-source-dirs:         src
    default-language:       Haskell2010

    default-extensions:     OverloadedStrings
                          , NumericUnderscores
                          , QuasiQuotes

test-suite test
    import:                 ghc-options
    type:                   exitcode-stdio-1.0
    default-language:       Haskell2010
    hs-source-dirs:         test, src

    -- NOTE: The libraries listed here may or may not match the ones listed in
    --       the library stanza above. It's better to keep them separate for
    --       now, at the cost of a bit of duplication.
    build-depends:          base ^>=4.17.2.0
                          , hspec
                          , time
                          , time-lens
                          , template-haskell
                          , raw-strings-qq
                          , pcre-heavy
                          , text
                          , mtl
                          , bytestring
                          , aeson
                          , vector
                          , containers

    default-extensions:     OverloadedStrings
                          , NumericUnderscores
                          , QuasiQuotes
                          , TemplateHaskell
                          , DeriveGeneric

    main-is:                Main.hs

    other-modules:          Domain.ValidationSpec
                          , Domain.Authentication
                          , Domain.Validation
                          , TimeSpec
                          , RegexSpec
                          , JsonSpec
